--- a/Index2.0.html
+++ b/Index2.0.html
@@ -11,4 +11,5 @@ Hey Guy</title>
 <h4 style="color:green;text-align:center;font-size:200%">Hello <u>my</u> dear <mark>friends</mark>.</h4>
 <h5 style="font-size:300%;color:violet;text-align:right">Hello <del>Trump</del></h5>
 <p><img src="Без названия.jpg"></p></body>
+<div style="width:300px;height:100px"></div>
 </html>
