--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <title>
 Hey Guy</title>
 </head>
-<body style="background-color:yellow">
+<body style="background-color:yellow"><script> alert('Hello World')</script>
 <h1 style="color:blue;text-align:center">Hello</h1><hr>
 <p> <pre style="color:purple">I'm <u>lucky</u> <i>boy</i>.</pre></p><hr>
 <h2 style="color:red;text-align:right;font-size:300%">Hello my <i>dear</i> friends.</h2>
