--- a/index (2).html
+++ b/index (2).html
@@ -1,8 +1,7 @@
 <html>
 <head><title>Instagram</title>
 </head>
-<body style="text-align:center;background-color:black"><img src="download.jpg"></p><button onclick="like()">Like</button>
-
+<body style="text-align:center;background-color:black"><img src="download.jpg"></p><button onclick="like()">Like</button><h1><button onclick="take()">Like</button>
 <script>
 var likes=0;
 console.log(likes);
@@ -10,6 +9,12 @@ function like(value) {
 console.log("YEAHHHH");
 likes++;
 console.log(likes);}
+var takes =0;
+console.log(takes);
+function take(value){
+console.log("WWWooooWWWW");
+takes++;
+console.log(takes);}
 like(44)
 </script>
 </body>
