--- a/index (2).html
+++ b/index (2).html
@@ -1,18 +1,21 @@
 <html>
 <head><title>Instagram</title>
 </head>
-<body style="text-align:center;background-color:black"><img src="download.jpg"></p><button onclick="like()">Like</button><h1><button onclick="take()">Like</button>
+<body style="text-align:center;background-color:black"><img src="download.jpg">
+<p><button onclick="like()">Like</button></p><hr>
+<img src="Winniethepooh.png">
+<p><button onclick="take()">Like</button></p><hr>
 <script>
 var likes=0;
 console.log(likes);
 function like(value) {
-console.log("YEAHHHH");
+console.log("Madonna");
 likes++;
 console.log(likes);}
 var takes =0;
 console.log(takes);
 function take(value){
-console.log("WWWooooWWWW");
+console.log("Winnie the Pooh");
 takes++;
 console.log(takes);}
 like(44)
