One more new photo

--- a/index (2).html
+++ b/index (2).html
@@ -5,6 +5,8 @@
 <p><button onclick="like()">Like</button></p><hr>
 <img src="Winniethepooh.png">
 <p><button onclick="take()">Like</button></p><hr>
+<img src="завантаження.jpg">
+<p><button onclick="make()">Like</button></p><hr>
 <script>
 var likes=0;
 console.log(likes);
@@ -18,6 +20,13 @@ function take(value){
 console.log("Winnie the Pooh");
 takes++;
 console.log(takes);}
+var makes=0
+console.log(makes)
+function make(value){
+console.log("Harry Potter")
+makes++
+console.log(makes);}
+
 like(44)
 </script>
 </body>
