--- a/index (2).html
+++ b/index (2).html
@@ -27,7 +27,8 @@ console.log("Harry Potter")
 makes++
 console.log(makes);}
 
-like(44)
+like(44);
+alert("Hello World")
 </script>
 </body>
 </html>
